@@ -1,4 +1,7 @@
 30-11-2007 Qball Cow <Qball@Sarine.nl>
+	* Current playlist rewrite.
+
+30-11-2007 Qball Cow <Qball@Sarine.nl>
 	* Merge gmi branch
 	* update version to 0.15.5.1
 
